# vcalib

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_configs.py  run_experiments.py  session-ses_0f75.md
configs/: grid.yaml
configs/autolabel/: prompts.yaml
configs/experiments/: det_stc_combined_lv2.yaml  det_stc_combined_lv3.yaml  det_stc_detection_lv2.yaml  det_stc_detection_lv3.yaml  level2_affine_backbone_all.yaml  level2_affine_backbone_all_proj.yaml  level2_affine_backbone_early.yaml  level2_affine_backbone_early_proj.yaml  level2_affine_backbone_late.yaml  level2_affine_backbone_late_proj.yaml  level2_affine_backbone_mid.yaml  level2_affine_backbone_mid_proj.yaml  level2_affine_proj_decoder.yaml  level2_affine_projector.yaml  level2_brightness_backbone_all.yaml  level2_brightness_backbone_all_proj.yaml  level2_brightness_backbone_early.yaml  level2_brightness_backbone_early_proj.yaml  level2_brightness_backbone_late.yaml  level2_brightness_backbone_late_proj.yaml  level2_brightness_backbone_mid.yaml  level2_brightness_backbone_mid_proj.yaml  level2_brightness_proj_decoder.yaml  level2_brightness_projector.yaml  level2_ccm_backbone_all.yaml  level2_ccm_backbone_all_proj.yaml  level2_ccm_backbone_early.yaml  level2_ccm_backbone_early_proj.yaml  level2_ccm_backbone_late.yaml  level2_ccm_backbone_late_proj.yaml  level2_ccm_backbone_mid.yaml  level2_ccm_backbone_mid_proj.yaml  level2_ccm_proj_decoder.yaml  level2_ccm_projector.yaml  level2_chromatic_backbone_all.yaml  level2_chromatic_backbone_all_proj.yaml  level2_chromatic_backbone_early.yaml  level2_chromatic_backbone_early_proj.yaml  level2_chromatic_backbone_late.yaml  level2_chromatic_backbone_late_proj.yaml  (+206 more)
data/labels/: instances_sam3.json  instances_sam3_summary.csv
docs/: finetune-rfdetr-ref.md  results_sweep_200.md
docs/specs/: 2026-06-27-advanced-filters.md  (+2 more)
results/: detbench_det_lv2_all.csv  detbench_det_lv2_test.csv  detbench_det_lv3_all.csv  detbench_det_lv3_test.csv  detection_benchmark.csv  detection_benchmark_all_lv2.csv  detection_benchmark_all_lv3.csv  visual_report.html
scripts/: augment_dataset.py  augment_illumination.py  autolabel_sam3.py  benchmark_detection.py  benchmark_exdark.py  create_datasets.py  diagnose_ceiling.py  exdark_to_coco.py  finetune_fomo.py  finetune_rfdetr.py  finetune_rtdetrv4.py  finetune_yolo9.py  generate_experiment_configs.py  generate_multimodel_figures.py  generate_phase2_configs.py  generate_sweep2_configs.py  generate_visual_report.py  make_detection_coco.py  organize_raw_scenes.py  run_coupling_study.py  run_exdark_matrix.sh  run_finetune_matrix.sh  train_filter_detloss.py  train_filter_detloss_rtdetrv4.py  train_filter_detloss_yolo9.py
src/: __init__.py  benchmark.py  calibration.py  diagnostics.py  experiment_config.py  grid_search.py
tasks/: todo.md
tests/: __init__.py  _filter_helpers.py  test_activations.py  test_calibration.py  test_ccm_high_order.py  test_chromatic_adaptation.py  test_data_pairs.py  test_diagnostics.py  test_experiment_config.py  test_filters.py  test_layer_groups.py  test_local_tonemap.py  test_lut_3d.py  test_lut_3d_lowrank.py  test_neural_pixel.py  test_spatial_filters.py  test_spatial_tone_curve.py  test_synth_relit.py  test_tone_curve.py
(+965 files in other folders)
