[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcalib"
version = "0.1.0"
description = "Calibration filter for RF-DETR under illumination shifts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Carlos", email = "carlospovedat1388@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=5.1.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "types-PyYAML>=6.0.12",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (handled by format)

[tool.ruff.format]
line-length = 100
quote-style = "double"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["F841"]      # unused variables

[tool.black]
line-length = 100
target-version = ["py310"]
