[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "vcalib"
version = "0.1.0"
description = "Calibration filter for RF-DETR under illumination shifts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Carlos", email = "carlospovedat1388@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=5.1.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "libreyolo[rfdetr]>=1.2.0.dev0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "types-PyYAML>=6.0.12",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
libreyolo = { path = "3rd_party/libreyolo" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: tests that load the RF-DETR model or run full calibration (tens of seconds)",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py310"]
